--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -8,6 +8,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:layout_gravity="center_horizontal">
 
         <Button
@@ -17,7 +18,28 @@
             android:textSize="@dimen/sp_larger"
             android:id="@+id/camera_sample"
             android:gravity="center"
-            android:background="@color/colorAccent"
+            android:background="@android:color/darker_gray"
+            android:layout_gravity="center_horizontal" />
+        <Button
+            android:id="@+id/surfaceGame"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:text="@string/surface_game"
+            android:textSize="@dimen/sp_larger"
+            android:gravity="center"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="@dimen/dip_15"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:id="@+id/matrix_game"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:text="@string/game_matrix"
+            android:textSize="@dimen/sp_larger"
+            android:gravity="center"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="@dimen/dip_15"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
 </LinearLayout>
