--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#ffffff</color>
+    <color name="blue">#00a2ff</color>
+    <color name="blue_40">#4000a2ff</color>
+    <color name="blue_dark">#0082cc</color>
+    <color name="blue_light">#e5f6ff</color>
+    <color name="btn_blue">#01a1ff</color>
+    <color name="gray">#999999</color>
 </resources>
