--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -41,5 +41,15 @@
             android:background="@android:color/darker_gray"
             android:layout_marginTop="@dimen/dip_15"
             android:layout_gravity="center_horizontal" />
+        <Button
+            android:id="@+id/refresh_view"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:text="@string/refresh_view"
+            android:textSize="@dimen/sp_larger"
+            android:gravity="center"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="@dimen/dip_15"
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 </LinearLayout>
