--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -76,6 +76,7 @@
     <dimen name="sp_smallest">12sp</dimen>
     <dimen name="sp_larger">18sp</dimen>
 
+    <dimen name="sp_10">10sp</dimen>
     <dimen name="sp_11">11sp</dimen>
     <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_13">13sp</dimen>
